--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,13 @@ notify = "6"
 fnv = "1"
 glob = "0.3"
 
+[profile.release]
+opt-level = 3
+lto = "thin"
+codegen-units = 1
+panic = "abort"
+strip = true
+
 [[bin]]
 name = "wolfproxy"
 path = "src/main.rs"
