Add monitoring dashboard on port 5001
- New monitoring web interface with HTTP Basic Auth (default: admin/admin)
- Real-time dashboard showing uptime, requests, data in/out
- Upstream server monitoring with status, weight, active connections, failures
- JSON API endpoint at /stats for programmatic access
- Auto-refresh every 5 seconds
- Reduced log noise for IP-based/scanner requests (now logged at debug level)
- Updated README with monitoring documentation

--- a/wolfproxy.toml
+++ b/wolfproxy.toml
@@ -10,3 +10,12 @@ config_dir = "/etc/nginx"
 
 # Automatically reload configuration when files change
 auto_reload = false
+
+[monitoring]
+# Enable the monitoring web interface
+enabled = true
+# Port for the monitoring server
+port = 5001
+# HTTP Basic Auth credentials
+username = "admin"
+password = "admin"
