--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,9 @@ http-body-util = "0.1"
 
 # Serialization
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 toml = "0.8"
+base64 = "0.22"
 
 # TLS/SSL
 rustls = "0.23"
