--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ http-body-util = "0.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8"
+toml_edit = "0.22"
 base64 = "0.22"
 
 # TLS/SSL
